--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -23,8 +23,8 @@ futures = "0.3.13"
 lockbook-crypto = { path = "../../core/libs/crypto" }
 lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
-pagerduty-rs = { git = "https://github.com/Parth/pagerduty-rs", features = ["sync"] }
-rust-s3 = "0.27.0-rc3"
+pagerduty-rs = { git = "https://github.com/steverusso/pagerduty-rs", default-features = false, features = ["async", "rustls"] }
+rust-s3 = { version = "0.27.0-rc3", default-features = false, features = ["tokio-rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 shadow-rs = "0.6.2"
