--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3.13"
 lockbook-crypto = { path = "../../core/libs/crypto" }
 lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
-pagerduty-rs = { git = "https://github.com/steverusso/pagerduty-rs", default-features = false, features = ["async", "rustls"] }
+pagerduty-rs = { version = "0.1.5", default-features = false, features = ["async", "rustls"] }
 rust-s3 = { version = "0.27.0-rc3", default-features = false, features = ["tokio-rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
