--- a/containers/local.env
+++ b/containers/local.env
@@ -8,6 +8,9 @@ FILES_DB_BUCKET=testbucket
 FILES_DB_ACCESS_KEY=minioadmin
 FILES_DB_SECRET_KEY=minioadmin
 
+MINUTES_BETWEEN_METRICS_REFRESH=5
+MILLIS_BETWEEN_REDIS_CALLS=100
+
 API_URL=http://localhost:8000
 SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
