--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -11,6 +11,7 @@ WORKDIR core
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs src/lib.rs
+COPY rustfmt.toml .
 COPY core/Cargo.toml .
 COPY containers/dummy.rs libs/models/src/lib.rs
 COPY core/libs/models/Cargo.toml libs/models/.
