--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -33,7 +33,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
+        RUST_LOG=lockbook_server=debug STRIPE_SECRET=$STRIPE_SECRET STRIPE_PREMIUM_PRICE_ID=$STRIPE_PREMIUM_PRICE_ID ./target/release/lockbook-server \
       '
 
   core_server_tests:
