--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -27,13 +27,16 @@ services:
     image: server:$HASH
     env_file:
       - ../containers/test.env
+    environment:
+      - STRIPE_SECRET
+      - STRIPE_PREMIUM_PRICE_ID
     depends_on:
       - config_filesdb
       - indexdb
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        RUST_LOG=lockbook_server=debug STRIPE_SECRET=$STRIPE_SECRET STRIPE_PREMIUM_PRICE_ID=$STRIPE_PREMIUM_PRICE_ID ./target/release/lockbook-server \
+        RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
       '
 
   core_server_tests:
