--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -34,18 +34,9 @@ services:
       /bin/sh -c '\
         sleep 5 && \
         export STRIPE_SIGNING_SECRET=$$(/usr/bin/stripe listen --api-key $$STRIPE_SECRET --print-secret) && \
-        (nohup /usr/bin/stripe listen --api-key $$STRIPE_SECRET --events invoice.payment_failed --events invoice.paid &) && \
+        (nohup /usr/bin/stripe listen --api-key $$STRIPE_SECRET --events invoice.payment_failed --events invoice.paid --forward-to $$API_URL/stripe-webhooks &) && \
         RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
       '
-
-  stripe-cli:
-    image: stripe/stripe-cli
-    env_file:
-      - ../containers/test.env
-    depends_on:
-      - lockbook_server
-    entrypoint: >
-      /bin/stripe listen --forward-to $$API_URL/stripe-webhooks
 
   core_server_tests:
     container_name: core_server_tests-integration-$HASH
