finding seg faults

--- a/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
+++ b/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8782669327CAB09600CB668C"
+               BuildableName = "EditorTest.xctest"
+               BlueprintName = "EditorTest"
+               ReferencedContainer = "container:Lockbook.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
