server: implement billing with stripe (#943)
* intermediate work

* a lot of server side work and db work towards implementing stripe

* =layout for new tables added

* added postgresql queries

* =finished added credit card

* added all lib.rs functions and billing service functions

* fixed db

* everything compiles

* got rid of unit request responses

* intermediate work involving new correct error parsing and macro for requests to simplify codebase

* moved out stripe calls into stripe_repo

* set deleted true in db for remove credit card endpoint

* renamed error

* made 1 endpoint for accepting credit card info and starting a subscription, also resolved some comments

* now (probably) coveres all error cases

* correctly handle uncommon subscription errors

* new tests work

* all get last registered credit card tests pass

* somewhat finished first webhook

* intermediaate work with second webhook

* implemented webhooks

* using hmac function to verify fixed time

* resolved majority of comments

* successfully changed based branch to master and renamed tests

* test ci commit

* intermediate code, partially implemented redis now testing

* all tests work

* fixed clippy

* fixed clippy

* intermediate work involving stripe

* everything compiles

* refactored and resolved compile errors

* fixed set of lint errors

* added test case for usage

* fmt

* resolved comments and fixed tests

* moved time change into tx

* forgot to make an ok_or into an ok_or_else

* changed ci to see internal error from previous fail

* fmt

* make cleanup depend on server logs

* change unset stripe secret

* added environment variable to dockercompose

* added environment variable args into dockercompose

* added stripe secrets to makefile

* added to dockerfile and command

* fixed stripe tests for ci

* made additional finishing touches before review

* forgot to forward stripe 

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -191,9 +191,21 @@ jobs:
       - name: CSharp-Core
         run: make csharp_interface_tests_run
 
-  Clean-Up:
+  Server-Logs:
     runs-on: [self-hosted, dockerized]
     needs: [Core-Server-Db, Kotlin-Core, Swift-Core, CSharp-Core]
+    if: always()
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get Server Logs
+        run: make get_server_logs
+        if: always()
+
+  Clean-Up:
+    runs-on: [self-hosted, dockerized]
+    needs: [Server-Logs]
     if: always()
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
