--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -1,4 +1,5 @@
 ARG HASH
+
 FROM rust:1.55 AS server-build
 RUN rustup component add rustfmt
 RUN rustup component add clippy
@@ -21,6 +22,8 @@ COPY containers/dummy.rs src/lib.rs
 COPY server/server/Cargo.toml .
 COPY server/server/build.rs .
 COPY rustfmt.toml .
+
+RUN curl -L https://github.com/stripe/stripe-cli/releases/download/v1.7.13/stripe_1.7.13_linux_x86_64.tar.gz | tar -xz -C /usr/bin
 
 # Dependency on core which has compile-time env var
 ENV API_URL=unused
