android: onboarding improvements (#1008)
* =made basic switcher

* implemented new onboarding screen and import screen

* added before you start and fixed bugs

* got rid of unused resources

* added working autofill

* made import screen appear when no root exists

* fixed text for import button and refactor

* added progressbar for import

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -30,9 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".screen.WelcomeActivity" />
-        <activity
-            android:name=".screen.NewAccountActivity" />
+            android:name=".screen.OnBoardingActvity" />
         <activity
             android:name=".screen.ImportAccountActivity" />
         <activity android:name=".screen.MainScreenActivity" />
