--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "lockbook-server"
-version = "0.1.2"
-authors = ["Parth <parth@mehrotra.me>"]
+version = "0.3.17"
 edition = "2018"
 build = "build.rs"
 
@@ -38,6 +37,7 @@ deadpool-redis = "0.10.1"
 redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
 redis_utils = "0.1.3"
 async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
+sha2 = "0.10.2"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
