--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
 
     // Miscellaneous
-    implementation "com.beust:klaxon:$json_parser_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$json_parser_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_reflect"
     implementation "com.journeyapps:zxing-android-embedded:$qr_embedded_version"
     implementation "com.google.zxing:core:$qr_core_version"
@@ -107,7 +107,6 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$logger_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "com.github.tingyik90:snackprogressbar:$snackprogressbar_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
     implementation project(':core')
 }
