--- a/server/instances/grafana/grafana.ini
+++ b/server/instances/grafana/grafana.ini
@@ -38,7 +38,7 @@
 ;http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-;domain = metrics.lockbook.app
+;domain = metrics.lockbook.net
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
@@ -46,7 +46,7 @@
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-root_url = https://metrics.lockbook.app
+root_url = https://metrics.lockbook.net
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 ;serve_from_sub_path = false
@@ -66,6 +66,13 @@ root_url = https://metrics.lockbook.app
 
 # Unix socket path
 ;socket =
+
+# CDN Url
+;cdn_url =
+
+# Sets the maximum time using a duration format (5s/5m/5ms) before timing out read of an incoming request and closing idle connections.
+# `0` means there is no timeout for reading the request.
+;read_timeout = 0
 
 #################################### Database ####################################
 [database]
@@ -110,6 +117,11 @@ root_url = https://metrics.lockbook.app
 # For "sqlite3" only. cache mode setting used for connecting to the database. (private, shared)
 ;cache_mode = private
 
+################################### Data sources #########################
+[datasources]
+# Upper limit of data sources that Grafana will return. This limit is a temporary configuration and it will be deprecated when pagination will be introduced on the list data sources API.
+;datasource_limit = 5000
+
 #################################### Cache server #############################
 [remote_cache]
 # Either "redis", "memcached" or "database" default is "database"
@@ -131,6 +143,24 @@ root_url = https://metrics.lockbook.app
 # This setting also applies to core backend HTTP data sources where query requests use an HTTP client with timeout set.
 ;timeout = 30
 
+# How many seconds the data proxy waits before sending a keepalive probe request.
+;keep_alive_seconds = 30
+
+# How many seconds the data proxy waits for a successful TLS Handshake before timing out.
+;tls_handshake_timeout_seconds = 10
+
+# How many seconds the data proxy will wait for a server's first response headers after
+# fully writing the request headers if the request has an "Expect: 100-continue"
+# header. A value of 0 will result in the body being sent immediately, without
+# waiting for the server to approve.
+;expect_continue_timeout_seconds = 1
+
+# The maximum number of idle connections that Grafana will keep alive.
+;max_idle_connections = 100
+
+# How many seconds the data proxy keeps an idle connection open before timing out.
+;idle_conn_timeout_seconds = 90
+
 # If enabled and user is not anonymous, data proxy will add X-Grafana-User header with username into the request, default is false.
 ;send_user_header = false
 
@@ -141,6 +171,9 @@ root_url = https://metrics.lockbook.app
 # running instances, dashboard and error counts. It is very helpful to us.
 # Change this option to false to disable reporting.
 ;reporting_enabled = true
+
+# The name of the distributor of the Grafana instance. Ex hosted-grafana, grafana-labs
+;reporting_distributor = grafana-labs
 
 # Set to false to disable all checks to https://grafana.net
 # for new versions (grafana itself and plugins), check is used
@@ -210,6 +243,14 @@ root_url = https://metrics.lockbook.app
 # when they detect reflected cross-site scripting (XSS) attacks.
 ;x_xss_protection = true
 
+# Enable adding the Content-Security-Policy header to your requests.
+# CSP allows to control resources the user agent is allowed to load and helps prevent XSS attacks.
+;content_security_policy = false
+
+# Set Content Security Policy template used when adding the Content-Security-Policy header to your requests.
+# $NONCE in the template includes a random nonce.
+;content_security_policy_template = """script-src 'unsafe-eval' 'strict-dynamic' $NONCE;object-src 'none';font-src 'self';style-src 'self' 'unsafe-inline';img-src 'self' data:;base-uri 'self';connect-src 'self' grafana.com;manifest-src 'self';media-src 'none';form-action 'self';"""
+
 #################################### Snapshots ###########################
 [snapshots]
 # snapshot sharing options
@@ -263,6 +304,9 @@ root_url = https://metrics.lockbook.app
 # Default UI theme ("dark" or "light")
 ;default_theme = dark
 
+# Path to a custom home page. Users are only redirected to this if the default home dashboard is used. It should match a frontend route and contain a leading slash.
+; home_page =
+
 # External user management, these options affect the organization users view
 ;external_manage_link_url =
 ;external_manage_link_name =
@@ -274,15 +318,21 @@ root_url = https://metrics.lockbook.app
 # Editors can administrate dashboard, folders and teams they create
 ;editors_can_admin = false
 
+# The duration in time a user invitation remains valid before expiring. This setting should be expressed as a duration. Examples: 6h (hours), 2d (days), 1w (week). Default is 24h (24 hours). The minimum supported duration is 15m (15 minutes).
+;user_invite_max_lifetime_duration = 24h
+
+# Enter a comma-separated list of users login to hide them in the Grafana UI. These users are shown to Grafana admins and themselves.
+; hidden_users =
+
 [auth]
 # Login cookie name
 ;login_cookie_name = grafana_session
 
-# The lifetime (days) an authenticated user can be inactive before being required to login at next visit. Default is 7 days,
-;login_maximum_inactive_lifetime_days = 7
+# The maximum lifetime (duration) an authenticated user can be inactive before being required to login at next visit. Default is 7 days (7d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month). The lifetime resets at each successful token rotation.
+;login_maximum_inactive_lifetime_duration =
 
-# The maximum lifetime (days) an authenticated user can be logged in since login time before being required to login. Default is 30 days.
-;login_maximum_lifetime_days = 30
+# The maximum lifetime (duration) an authenticated user can be logged in since login time before being required to login. Default is 30 days (30d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month).
+;login_maximum_lifetime_duration =
 
 # How often should auth tokens be rotated for authenticated users when being active. The default is each 10 minutes.
 ;token_rotation_interval_minutes = 10
@@ -300,11 +350,14 @@ root_url = https://metrics.lockbook.app
 # This setting is ignored if multiple OAuth providers are configured.
 ;oauth_auto_login = false
 
-# OAuth state max age cookie duration. Defaults to 60 seconds.
-;oauth_state_cookie_max_age = 60
+# OAuth state max age cookie duration in seconds. Defaults to 600 seconds.
+;oauth_state_cookie_max_age = 600
 
 # limit of api_key seconds to live before expiration
 ;api_key_max_seconds_to_live = -1
+
+# Set to true to enable SigV4 authentication option for HTTP-based datasources.
+;sigv4_auth_enabled = false
 
 #################################### Anonymous Auth ######################
 [auth.anonymous]
@@ -320,7 +373,7 @@ root_url = https://metrics.lockbook.app
 # mask the Grafana version number for unauthenticated users
 ;hide_version = false
 
-#################################### Github Auth ##########################
+#################################### GitHub Auth ##########################
 [auth.github]
 ;enabled = false
 ;allow_sign_up = true
@@ -407,6 +460,9 @@ root_url = https://metrics.lockbook.app
 ;scopes = user:email,read:org
 ;email_attribute_name = email:primary
 ;email_attribute_path =
+;login_attribute_path =
+;name_attribute_path =
+;id_token_attribute_name =
 ;auth_url = https://foo.bar/login/oauth/authorize
 ;token_url = https://foo.bar/login/oauth/access_token
 ;api_url = https://foo.bar/user
@@ -441,10 +497,20 @@ root_url = https://metrics.lockbook.app
 ;config_file = /etc/grafana/ldap.toml
 ;allow_sign_up = true
 
-# LDAP backround sync (Enterprise only)
+# LDAP background sync (Enterprise only)
 # At 1 am every day
 ;sync_cron = "0 0 1 * * *"
 ;active_sync_enabled = true
+
+#################################### AWS ###########################
+[aws]
+# Enter a comma-separated list of allowed AWS authentication providers. 
+# Options are: default (AWS SDK Default), keys (Access && secret key), credentials (Credentials field), ec2_iam_role (EC2 IAM Role)
+; allowed_auth_providers = default,keys,credentials
+
+# Allow AWS users to assume a role using temporary security credentials. 
+# If true, assume role will be enabled for all AWS authentication providers that are specified in aws_auth_providers
+; assume_role_enabled = true
 
 #################################### SMTP / Emailing ##########################
 [smtp]
@@ -524,6 +590,25 @@ root_url = https://metrics.lockbook.app
 # Syslog tag. By default, the process' argv[0] is used.
 ;tag =
 
+[log.frontend]
+# Should Sentry javascript agent be initialized
+;enabled = false
+
+# Sentry DSN if you want to send events to Sentry.
+;sentry_dsn =
+
+# Custom HTTP endpoint to send events captured by the Sentry agent to. Default will log the events to stdout.
+;custom_endpoint = /log
+
+# Rate of events to be reported between 0 (none) and 1 (all), float
+;sample_rate = 1.0
+
+# Requests per second limit enforced an extended period, for Grafana backend log ingestion endpoint (/log).
+;log_endpoint_requests_per_second_limit = 3
+
+# Max requests accepted per short interval of time for Grafana backend log ingestion endpoint (/log).
+;log_endpoint_burst_limit = 15
+
 #################################### Usage Quotas ########################
 [quota]
 ; enabled = false
@@ -589,6 +674,39 @@ root_url = https://metrics.lockbook.app
 # Makes it possible to enforce a minimal interval between evaluations, to reduce load on the backend
 ;min_interval_seconds = 1
 
+# Configures for how long alert annotations are stored. Default is 0, which keeps them forever.
+# This setting should be expressed as a duration. Examples: 6h (hours), 10d (days), 2w (weeks), 1M (month).
+;max_annotation_age =
+
+# Configures max number of alert annotations that Grafana stores. Default value is 0, which keeps all alert annotations.
+;max_annotations_to_keep =
+
+#################################### Annotations #########################
+[annotations]
+# Configures the batch size for the annotation clean-up job. This setting is used for dashboard, API, and alert annotations.
+;cleanupjob_batchsize = 100
+
+[annotations.dashboard]
+# Dashboard annotations means that annotations are associated with the dashboard they are created on.
+
+# Configures how long dashboard annotations are stored. Default is 0, which keeps them forever.
+# This setting should be expressed as a duration. Examples: 6h (hours), 10d (days), 2w (weeks), 1M (month).
+;max_age =
+
+# Configures max number of dashboard annotations that Grafana stores. Default value is 0, which keeps all dashboard annotations.
+;max_annotations_to_keep =
+
+[annotations.api]
+# API annotations means that the annotations have been created using the API without any
+# association with a dashboard.
+
+# Configures how long Grafana stores API annotations. Default is 0, which keeps them forever.
+# This setting should be expressed as a duration. Examples: 6h (hours), 10d (days), 2w (weeks), 1M (month).
+;max_age =
+
+# Configures max number of API annotations that Grafana keeps. Default value is 0, which keeps all API annotations.
+;max_annotations_to_keep =
+
 #################################### Explore #############################
 [explore]
 # Enable the Explore section
@@ -607,6 +725,12 @@ root_url = https://metrics.lockbook.app
 #If both are set, basic auth will be required for the metrics endpoint.
 ; basic_auth_username =
 ; basic_auth_password =
+
+# Metrics environment info adds dimensions to the `grafana_environment_info` metric, which
+# can expose more information about the Grafana instance.
+[metrics.environment_info]
+#exampleLabel1 = exampleValue1
+#exampleLabel2 = exampleValue2
 
 # Send internal metrics to Graphite
 [metrics.graphite]
@@ -635,6 +759,8 @@ root_url = https://metrics.lockbook.app
 # and indicates the initial sampling rate before the actual one
 # is received from the mothership
 ;sampler_param = 1
+# sampling_server_url is the URL of a sampling manager providing a sampling strategy.
+;sampling_server_url =
 # Whether or not to use Zipkin propagation (x-b3- HTTP headers).
 ;zipkin_propagation = false
 # Setting this to true disables shared RPC spans.
@@ -694,6 +820,7 @@ root_url = https://metrics.lockbook.app
 ;app_tls_skip_verify_insecure = false
 # Enter a comma-separated list of plugin identifiers to identify plugins that are allowed to be loaded even if they lack a valid signature.
 ;allow_loading_unsigned_plugins =
+;marketplace_url = https://grafana.com/grafana/plugins/
 
 #################################### Grafana Image Renderer Plugin ##########################
 [plugin.grafana-image-renderer]
@@ -762,3 +889,27 @@ root_url = https://metrics.lockbook.app
 [feature_toggles]
 # enable features, separated by spaces
 ;enable =
+
+[date_formats]
+# For information on what formatting patterns that are supported https://momentjs.com/docs/#/displaying/
+
+# Default system date format used in time range picker and other places where full time is displayed
+;full_date = YYYY-MM-DD HH:mm:ss
+
+# Used by graph and other places where we only show small intervals
+;interval_second = HH:mm:ss
+;interval_minute = HH:mm
+;interval_hour = MM/DD HH:mm
+;interval_day = MM/DD
+;interval_month = YYYY-MM
+;interval_year = YYYY
+
+# Experimental feature
+;use_browser_locale = false
+
+# Default timezone for user preferences. Options are 'browser' for the browser local timezone or a timezone name from IANA Time Zone database, e.g. 'UTC' or 'Europe/Amsterdam' etc.
+;default_timezone = browser
+
+[expressions]
+# Enable or disable the expressions functionality.
+;enabled = true
