--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         gradle_version = '7.1.2'
         core_ktx_version = '1.7.0'
         navigation_version = '2.4.1'
-        kotlin_version = '1.6.0'
-        kotlin_reflect = '1.6.0'
+        kotlin_version = '1.6.10'
+        kotlin_reflect = '1.6.10'
         appcompat_version = '1.4.1'
         junit_version = '4.13.2'
         junit_test_version = '1.1.3'
@@ -33,7 +33,7 @@ buildscript {
         fragment_version = '1.4.1'
         sliding_pane_layout_version = '1.2.0'
         recyclical_version = "1.1.0"
-        kotlin_gradle_plugin = "1.5.30"
+        safe_args_gradle_plugin = "2.3.5"
     }
 
     repositories {
@@ -44,8 +44,8 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_gradle_plugin"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$safe_args_gradle_plugin"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
