--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -2,38 +2,38 @@
 
 buildscript {
     ext {
-        test_runner_version = '1.3.0'
-        gradle_version = '7.0.0'
-        core_ktx_version = '1.5.0'
-        navigation_version = '2.3.5'
-        kotlin_version = '1.5.31'
-        kotlin_reflect = '1.5.10'
-        appcompat_version = '1.3.0'
+        test_runner_version = '1.4.0'
+        gradle_version = '7.1.2'
+        core_ktx_version = '1.7.0'
+        navigation_version = '2.4.1'
+        kotlin_version = '1.6.10'
+        kotlin_reflect = '1.6.10'
+        appcompat_version = '1.4.1'
         junit_version = '4.13.2'
-        junit_test_version = '1.1.2'
-        espresso_test_version = '3.3.0'
-        constraint_layout_version = '2.0.4'
-        material_ui_version = '1.3.0'
+        junit_test_version = '1.1.3'
+        espresso_test_version = '3.4.0'
+        constraint_layout_version = '2.1.3'
+        material_ui_version = '1.5.0'
         qr_embedded_version = '4.2.0'
         qr_core_version = '3.4.1'
         json_parser_version = '1.3.2'
         coroutine_version = '1.3.9'
         coroutine_android_version = '1.5.0-native-mt'
-        lifecycle_version = '2.3.1'
+        lifecycle_version = '2.4.1'
         result_version = '1.1.7'
         fingerprint_version = '1.1.0'
         dialog_version = '3.3.0'
-        preference_version = '1.1.1'
+        preference_version = '1.2.0'
         refresh_version = '1.1.0'
         markdown_version = '4.6.2'
         logger_version = '4.7.1'
-        work_version = '2.7.0-beta01'
+        work_version = '2.7.1'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
-        fragment_version = '1.3.4'
-        sliding_pane_layout_version = '1.2.0-beta01'
-        tree_view_version = "d051ce75f5"
+        fragment_version = '1.4.1'
+        sliding_pane_layout_version = '1.2.0'
         recyclical_version = "1.1.0"
+        safe_args_gradle_plugin = "2.3.5"
     }
 
     repositories {
@@ -45,14 +45,13 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$safe_args_gradle_plugin"
         classpath "org.jmailen.gradle:kotlinter-gradle:$kotlinter_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-
 }
 
 allprojects {
