--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -15,6 +15,6 @@ gtk = { package = "gtk4", version = "0.4.1", features = ["v4_6"] }
 gio = "0.15.1"
 sv5 = { package = "sourceview5", version = "0.4.1" }
 gdk-pixbuf = "0.15.4"
-qrcode-generator = "*"
-once_cell = "*"
-regex = "*"
+qrcode-generator = "4.1.3"
+once_cell = "1.10.0"
+regex = "1.5.5"
