--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -1,5 +1,5 @@
 ARG HASH
-FROM rust:1.55 AS cli-build
+FROM rust:1.59 AS cli-build
 RUN rustup component add rustfmt
 RUN rustup component add clippy
 
@@ -38,7 +38,7 @@ RUN cargo fmt -- --check -l
 
 # Check lint
 FROM cli:${HASH} AS cli-lint
-RUN cargo clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::upper-case-acronyms -A clippy::suspicious-operation-groupings
+RUN cargo clippy -- -D warnings
 
 # Run cli tests
 FROM cli:${HASH} AS cli-test
