--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -1,5 +1,5 @@
 ARG HASH
-FROM rust:1.55 AS core-build
+FROM rust:1.59 AS core-build
 RUN rustup component add clippy
 RUN rustup component add rustfmt
 
@@ -34,7 +34,7 @@ RUN cargo fmt -- --check -l
 
 # Check the lint of core
 FROM core:${HASH} AS core-lint
-RUN cargo clippy -- -D warnings -A clippy::redundant-field-names -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::upper-case-acronyms -A clippy::suspicious-operation-groupings
+RUN cargo clippy -- -D warnings
 
 # Set up for integration tests
 FROM core:${HASH} AS core-server-tests
