--- a/containers/Dockerfile.linux
+++ b/containers/Dockerfile.linux
@@ -47,7 +47,7 @@ RUN cargo fmt -- --check -l
 
 # Check the lint of core
 FROM linux:${HASH} AS linux-lint
-RUN cargo clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::unnecessary-wraps -A clippy::upper-case-acronyms -A clippy::suspicious-operation-groupings -A clippy::blocks-in-if-conditions
+RUN cargo clippy -- -D warnings
 
 # Run core tests
 FROM linux:${HASH} AS linux-test
