--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -1,6 +1,5 @@
 ARG HASH
-
-FROM rust:1.55 AS server-build
+FROM rust:1.59 AS server-build
 RUN rustup component add rustfmt
 RUN rustup component add clippy
 
@@ -46,4 +45,4 @@ RUN cargo fmt -- --check -l
 
 # Check lint
 FROM server:${HASH} AS server-lint
-RUN cargo clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::upper-case-acronyms
+RUN cargo clippy -- -D warnings
