--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -52,8 +52,12 @@ debug = true
 
 [dev-dependencies]
 cpuprofiler = "0.0.4"
-criterion = "0.3.3"
+criterion = "0.3.5"
 indicatif = "0.17.0-beta.1"
 libsecp256k1 = "0.7.0"
 variant_count = "1.1.0"
 num_cpus = "1.13.0"
+
+[[bench]]
+name = "benchmarks"
+harness = false
