--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -28,6 +28,7 @@ bincode = "1.3.3"
 chrono = "0.4.15"
 diffy = "0.2.0"
 flate2 = "1.0"
+fuzzy-matcher = "0.3.7"
 image = "0.23.13" 
 jni = { version = "0.13.1", default-features = false }
 rand = "0.8.4"
