--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -11,6 +11,7 @@ name = "lockbook_desktop_gtk"
 lb = { package = "lb-api", path = "./lb-api" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+fuzzy-matcher = "0.3.7"
 gtk = { package = "gtk4", version = "0.4.1", features = ["v4_6"] }
 gio = "0.15.1"
 sv5 = { package = "sourceview5", version = "0.4.1" }
