--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -47,6 +47,7 @@ libsecp256k1 = "0.7.0"
 tracing = "0.1.5"
 tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
+hmdb = "0.1.4"
 
 [profile.release]
 debug = true
