--- a/containers/Dockerfile.linux
+++ b/containers/Dockerfile.linux
@@ -1,7 +1,8 @@
 ARG HASH
-FROM manjarolinux/base AS linux-build
+FROM ubuntu:jammy AS linux-build
 
-RUN pacman -S --noconfirm cairo gdk-pixbuf2 pango graphene gtk4 gtksourceview5
+RUN apt update
+RUN apt install -y curl build-essential libglib2.0-dev libcairo2-dev libpango1.0-dev libgdk-pixbuf-2.0-dev libgraphene-1.0-dev libgtk-4-dev libgtksourceview-5-dev
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
 
