--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,12 +15,6 @@ default = ["rustls-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 native-tls = ["reqwest/native-tls"]
 
-[dependencies.lockbook-models]
-path = "libs/models"
-
-[dependencies.lockbook-crypto]
-path = "libs/crypto"
-
 [dependencies]
 base64 = "0.11.0"
 basic-human-duration = "0.1.2"
@@ -49,6 +43,8 @@ tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
 hmdb = "0.1.12"
 lazy_static = "1.4.0"
+lockbook-models = { path = "libs/models" }
+lockbook-crypto = { path = "libs/crypto" }
 
 [profile.release]
 debug = true
@@ -60,6 +56,7 @@ indicatif = "0.17.0-beta.1"
 libsecp256k1 = "0.7.0"
 variant_count = "1.1.0"
 num_cpus = "1.13.0"
+test_utils = { path = "libs/test_utils" }
 
 [[bench]]
 name = "bench_main"
