--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -12,6 +12,8 @@ COPY rustfmt.toml .
 COPY core/Cargo.toml .
 COPY containers/dummy.rs libs/models/src/lib.rs
 COPY core/libs/models/Cargo.toml libs/models/.
+COPY containers/dummy.rs libs/test_utils/src/lib.rs
+COPY core/libs/test_utils/Cargo.toml libs/test_utils/.
 COPY containers/dummy.rs libs/crypto/src/lib.rs
 COPY core/libs/crypto/Cargo.toml libs/crypto/.
 RUN mkdir benches/
@@ -27,6 +29,7 @@ ENV API_URL=unused
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/lib.rs
 RUN touch libs/models/src/lib.rs
+RUN touch libs/test_utils/src/lib.rs
 RUN touch libs/crypto/src/lib.rs
 RUN cargo build --release
 
@@ -44,5 +47,6 @@ FROM core:${HASH} AS core-server-tests
 ENV API_URL=http://lockbook_server:8000
 RUN touch src/lib.rs
 RUN touch libs/models/src/lib.rs
+RUN touch libs/test_utils/src/lib.rs
 RUN touch libs/crypto/src/lib.rs
 RUN cargo build --release
