--- a/server/admin/Cargo.toml
+++ b/server/admin/Cargo.toml
@@ -13,5 +13,5 @@ deadpool-redis = "0.10.1"
 redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
 redis_utils = "0.1.3"
 async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
-google-androidpublisher3 = "3.0.0+20220307"
-hyper = "0.14.18"
+google-androidpublisher3 = "3.1.0"
+google-pubsub1 = "3.1.0"
