--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -38,7 +38,9 @@ redis = { version = "0.21", default-features = false, features = ["tokio-comp"] 
 redis_utils = "0.1.3"
 async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
 sha2 = "0.10.2"
-google-androidpublisher3 = "3.0.0+20220307"
+google-androidpublisher3 = "3.1.0"
+google-pubsub1 = "3.1.0"
+constant_time_eq = "0.2.2"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
