--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -14,6 +14,6 @@ structopt = "0.3.13"
 uuid = "0.8"
 serde_json = "1.0.44"
 chrono = "0.4"
-qr2term = "=0.2.1"
+qr2term = "0.3.0"
 hotwatch = "0.4.5"
 atty = "0.2"
