used different pdf renderer, images load faster, small design changes to files list to handle large names appropriately

--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -43,6 +43,7 @@ buildscript {
         google()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
     }
 
     dependencies {
