--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     implementation "com.github.tingyik90:snackprogressbar:$snackprogressbar_version"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "com.github.MikeOrtiz:TouchImageView:$image_viewer_version"
-    implementation "com.dmitryborodin:pdfview-android:1.1.0"
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
 
     implementation project(':core')
 }
