deleted lots of old themeing and added material3

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -17,11 +17,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Main">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".screen.InitialLaunchFigureOuter"
             android:noHistory="true"
-            android:theme="@style/Main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
