remade each dialog with material3 design and mainly finished fileslist material3 design

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -27,8 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".screen.CaptureActivityAutoRotate"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation" />
         <activity
-            android:name=".screen.OnBoardingActvity" />
+            android:name=".screen.OnBoardingActivity" />
         <activity
             android:name=".screen.ImportAccountActivity" />
         <activity android:name=".screen.MainScreenActivity" />
