new sync ui and more refinements

--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -110,4 +110,9 @@ dependencies {
     implementation "com.github.mhiew:android-pdf-viewer:$pdf_viewer_version"
 
     implementation project(':core')
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
