--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.7.0'
     ext {
         test_runner_version = '1.4.0'
         gradle_version = '7.1.2'
