--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         junit_test_version = '1.1.3'
         espresso_test_version = '3.4.0'
         constraint_layout_version = '2.1.3'
-        material_ui_version = '1.5.0'
+        material_ui_version = '1.6.1'
         qr_embedded_version = '4.3.0'
         json_parser_version = '1.3.3'
         coroutine_version = '1.3.9'
@@ -36,6 +36,7 @@ buildscript {
         billing_version = '4.1.0'
         image_viewer_version = '3.2.0'
         pdf_viewer_version = '3.2.0-beta.3'
+        fab_speed_dial = '3.3.0'
     }
 
     repositories {
