initial structure + new account

--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -40,6 +40,7 @@ async-stripe = { git = "https://github.com/arlyon/async-stripe", default-feature
 sha2 = "0.10.2"
 google-androidpublisher3 = "3.1.0"
 constant_time_eq = "0.2.2"
+hmdb = "0.1.12"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
