--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -37,6 +37,7 @@ buildscript {
         pdf_viewer_version = '3.2.0-beta.3'
         fab_speed_dial = '3.3.0'
         billing_version = '5.0.0'
+        donut_chart_version = '2.2.2'
     }
 
     repositories {
