cleanup, start fixing tests

--- a/containers/local.env
+++ b/containers/local.env
@@ -1,12 +1,5 @@
-INDEX_DB_REDIS_URL=redis://localhost
-
-FILES_DB_SCHEME=http
-FILES_DB_HOST=localhost
-FILES_DB_PORT=9000
-FILES_DB_REGION=universe
-FILES_DB_BUCKET=testbucket
-FILES_DB_ACCESS_KEY=minioadmin
-FILES_DB_SECRET_KEY=minioadmin
+INDEX_DB_LOCATION=/tmp/test
+FILES_PATH=/tmp/test
 
 MILLIS_BETWEEN_PAYMENT_FLOWS=0
 MILLIS_BETWEEN_LOCK_ATTEMPTS=0
