server: update stripe dependency

--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -32,7 +32,7 @@ libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
 prometheus = "0.13.0"
 prometheus-static-metric = "0.5.1"
 lazy_static = "1.4.0"
-async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
+async-stripe = { version = "0.15.0", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
 sha2 = "0.10.2"
 google-androidpublisher3 = "3.1.0"
 constant_time_eq = "0.2.2"
