--- a/server/admin/Cargo.toml
+++ b/server/admin/Cargo.toml
@@ -8,6 +8,6 @@ structopt = "0.3.13"
 lockbook-server = { path = "../server" }
 tokio = { version = "1.5.0", features = ["full"] }
 lockbook-models = { path = "../../core/libs/models" }
-async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
+async-stripe = { version = "0.15.0", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
 google-androidpublisher3 = "3.1.0"
 hmdb = "0.1.12"
