--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 
 members = [
 	"core",
-	"core/libs/crypto",
-	"core/libs/models",
+	"core/libs/shared",
 	"core/libs/test_utils",
 	"server/server",
 	"server/admin",
