--- a/core/libs/test_utils/Cargo.toml
+++ b/core/libs/test_utils/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 lockbook-core = { path = "../../" }
-lockbook-models = { path = "../models" }
+lockbook-shared = { path = "../shared" }
 hmdb = "0.1.12"
 bincode = "1.3.3"
 itertools = "0.10.1"
