--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -18,8 +18,7 @@ base64 = "0.13.0"
 bincode = "1.2.1"
 chrono = "0.4.15"
 futures = "0.3.13"
-lockbook-crypto = { path = "../../core/libs/crypto" }
-lockbook-models = { path = "../../core/libs/models" }
+lockbook-shared = { path = "../../core/libs/shared" }
 pagerduty-rs = { version = "0.1.5", default-features = false, features = ["async", "rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
