added the ability to delete an account, toggle a feature flag, and get the current state of them all

--- a/containers/local.env
+++ b/containers/local.env
@@ -15,6 +15,8 @@ GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN="${GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_REDIS_CALLS=100
 
+ADMINS="smailbarkouch, parth, travis, steve"
+
 API_URL=http://localhost:8000
 SERVER_PORT=8000
 MAX_AUTH_DELAY=200000
