--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -7,11 +7,8 @@ RUN rustup component add clippy
 COPY core/Cargo.toml /core/Cargo.toml
 COPY containers/dummy.rs /core/src/lib.rs
 
-COPY containers/dummy.rs /core/libs/models/src/lib.rs
-COPY core/libs/models/Cargo.toml /core/libs/models/Cargo.toml
-COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
-COPY core/libs/crypto/Cargo.toml /core/libs/crypto/Cargo.toml
-
+COPY containers/dummy.rs /core/libs/shared/src/lib.rs
+COPY core/libs/shared/Cargo.toml /core/libs/shared/Cargo.toml
 
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
@@ -28,8 +25,7 @@ COPY core /core
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch /clients/cli/src/main.rs
 RUN touch /core/src/lib.rs
-RUN touch /core/libs/models/src/lib.rs
-RUN touch /core/libs/crypto/src/lib.rs
+RUN touch /core/libs/shared/src/lib.rs
 RUN cargo build --release
 
 # Check formatting
