--- a/containers/Dockerfile.admin_cli
+++ b/containers/Dockerfile.admin_cli
@@ -9,16 +9,14 @@ WORKDIR admin-cli
 COPY server/server/Cargo.toml /server/Cargo.toml
 COPY server/server/build.rs /server/build.rs
 COPY core/Cargo.toml /core/Cargo.toml
-COPY core/libs/models/Cargo.toml /core/libs/models/Cargo.toml
-COPY core/libs/crypto/Cargo.toml /core/libs/crypto/Cargo.toml
+COPY core/libs/shared/Cargo.toml /core/libs/shared/Cargo.toml
 
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs /server/src/lib.rs
 COPY containers/dummy.rs /server/src/main.rs
 COPY containers/dummy.rs /core/src/lib.rs
-COPY containers/dummy.rs /core/libs/models/src/lib.rs
-COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
+COPY containers/dummy.rs /core/libs/shared/src/lib.rs
 
 COPY containers/dummy.rs src/main.rs
 COPY rustfmt.toml .
@@ -36,8 +34,7 @@ COPY server/server /server
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/main.rs
 RUN touch /core/src/lib.rs
-RUN touch /core/libs/models/src/lib.rs
-RUN touch /core/libs/crypto/src/lib.rs
+RUN touch /core/libs/shared/src/lib.rs
 RUN touch /server/src/lib.rs
 RUN cargo build --release
 
