--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -10,12 +10,10 @@ WORKDIR core
 COPY containers/dummy.rs src/lib.rs
 COPY rustfmt.toml .
 COPY core/Cargo.toml .
-COPY containers/dummy.rs libs/models/src/lib.rs
-COPY core/libs/models/Cargo.toml libs/models/.
+COPY core/libs/shared/Cargo.toml libs/shared/.
 COPY containers/dummy.rs libs/test_utils/src/lib.rs
 COPY core/libs/test_utils/Cargo.toml libs/test_utils/.
 COPY containers/dummy.rs libs/crypto/src/lib.rs
-COPY core/libs/crypto/Cargo.toml libs/crypto/.
 RUN mkdir benches/
 RUN touch benches/bench_main.rs
 RUN cargo test --release
@@ -28,9 +26,8 @@ ENV API_URL=unused
 
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/lib.rs
-RUN touch libs/models/src/lib.rs
+RUN touch libs/shared/src/lib.rs
 RUN touch libs/test_utils/src/lib.rs
-RUN touch libs/crypto/src/lib.rs
 RUN cargo build --release
 
 # Check the formatting of core
@@ -46,7 +43,6 @@ RUN cargo clippy --tests -- -D warnings
 FROM core:${HASH} AS core-server-tests
 ENV API_URL=http://lockbook_server:8000
 RUN touch src/lib.rs
-RUN touch libs/models/src/lib.rs
+RUN touch libs/shared/src/lib.rs
 RUN touch libs/test_utils/src/lib.rs
-RUN touch libs/crypto/src/lib.rs
 RUN cargo build --release
