--- a/containers/Dockerfile.performance
+++ b/containers/Dockerfile.performance
@@ -15,10 +15,8 @@ RUN apt update && apt install -y graphviz
 # Cargo caching
 COPY containers/dummy.rs src/lib.rs
 COPY core/Cargo.toml .
-COPY containers/dummy.rs libs/models/src/lib.rs
-COPY core/libs/models/Cargo.toml libs/models/Cargo.toml
-COPY containers/dummy.rs libs/crypto/src/lib.rs
-COPY core/libs/crypto/Cargo.toml libs/crypto/Cargo.toml
+COPY containers/dummy.rs libs/shared/src/lib.rs
+COPY core/libs/shared/Cargo.toml libs/shared/Cargo.toml
 COPY containers/dummy.rs benches/performator.rs
 COPY containers/dummy.rs benches/throughput.rs
 RUN cargo build --release
@@ -26,6 +24,5 @@ RUN cargo build --release
 # Changes onwards!
 COPY core .
 RUN touch src/lib.rs
-RUN touch libs/models/src/lib.rs
-RUN touch libs/crypto/src/lib.rs
+RUN touch libs/shared/src/lib.rs
 RUN cargo bench --no-run
