--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -7,14 +7,12 @@ WORKDIR server
 
 # Server depends on core via a relative import
 COPY core/Cargo.toml /core/Cargo.toml
-COPY core/libs/models/Cargo.toml /core/libs/models/Cargo.toml
-COPY core/libs/crypto/Cargo.toml /core/libs/crypto/Cargo.toml
+COPY core/libs/shared/Cargo.toml /core/libs/shared/Cargo.toml
 
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs /core/src/lib.rs
-COPY containers/dummy.rs /core/libs/models/src/lib.rs
-COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
+COPY containers/dummy.rs /core/libs/shared/src/lib.rs
 
 COPY containers/dummy.rs src/main.rs
 COPY containers/dummy.rs src/lib.rs
@@ -35,8 +33,7 @@ COPY core /core
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/main.rs
 RUN touch /core/src/lib.rs
-RUN touch /core/libs/models/src/lib.rs
-RUN touch /core/libs/crypto/src/lib.rs
+RUN touch /core/libs/shared/src/lib.rs
 RUN cargo build --release
 
 # Check formatting
